| Summary: | ASTERISK-19235: confbridge fails: chan_sip.c:6544 sip_write: Can't send 10 type frames with SIP write | ||||
| Reporter: | Sean Darcy (seandarcy) | Labels: | |||
| Date Opened: | 2012-01-23 10:20:31.000-0600 | Date Closed: | 2012-01-30 06:43:50.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_confbridge | ||
| Versions: | 1.8.9.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Fedora 15 x86-64 | Attachments: | |||
| Description: | An outside party (sip over tcp) is put into confbridge. He can hear the announcement clearly. But when a local extension (sip) enters the confbridge, the outside party hears broken/choppy voice from local party. Local party hears outside party clearly. All ulaw. Once local extension joins, flood of: WARNING[22568]: chan_sip.c:6544 sip_write: Can't send 10 type frames with SIP write This happen both in the case the outside party dials directly into the confbridge or dials a local extension and is transferred into the confbridge (before transfer local and remote hear clearly). From cli: -- Executing [151@longdistance:1] Answer("SIP/office_incoming-0000017b", "") in new stack -- Executing [81@longdistance:3] ConfBridge("SIP/office_incoming-00000180", "81") in new stack -- <SIP/office_incoming-00000180> Playing 'conf-onlyperson.ulaw' (language 'en') == Using UDPTL TOS bits 184 == Using UDPTL CoS mark 5 == Using SIP RTP TOS bits 184 == Using SIP RTP CoS mark 5 == Extension Changed 145[blf] new state InUse for Notify User 170 == Extension Changed 145[blf] new state InUse for Notify User 176 == Extension Changed 145[blf] new state InUse for Notify User 169 -- Executing [81@longdistance:1] Answer("SIP/145-00000183", "2000") in new stack -- Executing [81@longdistance:2] ConfBridge("SIP/145-00000183", "81") in new stack WARNING[22568]: chan_sip.c:6544 sip_write: Can't send 10 type frames with SIP write WARNING[22568]: chan_sip.c:6544 sip_write: Can't send 10 type frames with SIP write ........... BUT oddly, if two local parties go into the confbridge, they hear each other clearly, but same flood of warnings: -- Executing [81@longdistance:1] Answer("SIP/145-000001c2", "2000") in new stack == Using UDPTL TOS bits 184 == Using UDPTL CoS mark 5 == Using SIP RTP TOS bits 184 == Using SIP RTP CoS mark 5 -- Executing [81@longdistance:1] Answer("SIP/175-000001c3", "2000") in new stack -- Executing [81@longdistance:2] NoOp("SIP/145-000001c2", ""Using lowercase confbridge"") in new stack -- Executing [81@longdistance:3] ConfBridge("SIP/145-000001c2", "81") in new stack -- <SIP/145-000001c2> Playing 'conf-onlyperson.ulaw' (language 'en') -- Executing [81@longdistance:2] NoOp("SIP/175-000001c3", ""Using lowercase confbridge"") in new stack -- Executing [81@longdistance:3] ConfBridge("SIP/175-000001c3", "81") in new stack WARNING[23128]: chan_sip.c:6544 sip_write: Can't send 10 type frames with SIP write WARNING[23128]: chan_sip.c:6544 sip_write: Can't send 10 type frames with SIP write | ||||
| Comments: | By: Matt Jordan (mjordan) 2012-01-23 16:14:22.375-0600 Note that app_confbridge in Asterisk 1.8 is an extended support module, and is handled by the Asterisk community. Frame type '10' corresponds to a Comfort Noise frame, sent by one of the SIP peers involved in the conference. In general, comfort noise is not fully supported by Asterisk. You may want to turn off comfort noise generation on the peers and see if that alleviates this issue. By: Sean Darcy (seandarcy) 2012-01-29 11:24:47.365-0600 I finally broke down and installed 10 in the office. That fixed this problem (caused another SQL one though). I really should have stuck with meetme on 1.8! | ||||