chan_sip.c: try to send AST_FRAME_CNG noise on active circuits

This is just an attempt to push sth. down the network, instead
of dropping these frames.
As in issue #19235, missing that case on the `switch()` statement
would flood logs causing high system load sometimes.


https://issues.asterisk.org/jira/browse/ASTERISK-19235